# quest-hub-app

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile_legacy  LVEL_UP.PY  README.md  _Dockerfile  app.py  db_adapter_test.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  test.py
.github/workflows/: deploy_on_server.yml  run-tests.yml
.github/workflows/scripts/: send_telegram_alert.py
adapters/: abstract_source.py  db_source.py  supabase_db_adapter.py
adapters/tests/: supabase_db_adapter.py  supabasetest.py
fastapi_example/: Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
fastapi_example/app/routes/: __init__.py
fastapi_example/app/routes/v1/: auth.py  user.py
fastapi_example/fastapi_example/: __init__.py
fastapi_example/fastapi_example/adapters/: supabase.py
fastapi_example/fastapi_example/app/: __init__.py
fastapi_example/fastapi_example/app/routes/v1/: __init__.py  auth.py
fastapi_example/fastapi_example/modules/: settings.py
fastapi_example/fastapi_example/modules/user/: models.py
fastapi_example/tests/: supabasetest.py
logs/: log.py
model/: abstract_model.py  character_list_model.py  user_model.py
playbooks/: deploy.yml  deploy_new_version_playbook.yml  deploy_old_version_playbook.yml  deploy_playbook.yml  send_alert_playbook.yml  start_test_container_playbook.yml
quest_hub_fastapi_server/: __init__.py  docker-compose.yml
quest_hub_fastapi_server/adapters/: abstract_source.py  db_source.py
quest_hub_fastapi_server/app/: fastapi.py
quest_hub_fastapi_server/app/routes/: __init__.py
quest_hub_fastapi_server/app/schemas/: auth.py
quest_hub_fastapi_server/modules/: abstract_model.py  settings.py
quest_hub_fastapi_server/modules/char_list/: __init__.py  models.py
scripts/: send_telegram_alert.py
src/: main.py
src/adapters/: db_source.py
src/model/: character_list_model.py  user_model.py
src/quest_hub_fastapi_server/: __init__.py
src/quest_hub_tg_bot/: run_bot.py
tests/: docker-compose.yml  supabasetest.py
tests/adapters/: db_source_test.py  test.py
tests/model/: user_model_test.py
tests_endpoint/: conftest.py  test_post.py
(+35 files in other folders)
