[tool.poetry]
name = "quest-hub-fastapi-server"
version = "0.1.0"
description = ""
authors = ["Sergey Smaglyuk <smegloy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
pydantic-settings = "^2.6.0"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
supabase = "^2.9.1"
pydantic = {extras = ["email"], version = "^2.9.2"}


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "quest_hub_fastapi_server:start"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)'''

[tool.ruff]
line-length = 120
[tool.ruff.lint]
extend-select = ["E501"]